# recruiting_agent_pollock

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-vector.txt  requirements-voice.txt  requirements.txt
examples/: sample_job_description.txt
scripts/: voice_interview.py
src/recruiting_agent_pollock/: __init__.py  config.py  main.py
src/recruiting_agent_pollock/agents/: __init__.py  intent_classifier.py  parser_normalizer.py  question_planner.py  recruiter_qa.py  red_flags.py  scoring.py
src/recruiting_agent_pollock/db/: __init__.py  models.py  repository.py
src/recruiting_agent_pollock/db/migrations/: README.md
src/recruiting_agent_pollock/io/: __init__.py  text_interface.py  voice_interface.py
src/recruiting_agent_pollock/memory/: __init__.py  interview_memory.py
src/recruiting_agent_pollock/models/: __init__.py  llm_client.py
src/recruiting_agent_pollock/orchestrator/: __init__.py  interview_orchestrator.py  interview_state.py  job_ingestion.py  schemas.py
src/recruiting_agent_pollock/reasoning/: __init__.py  hypotheses.py  hypothesis_engine.py  oscar_adapter.py  rules.py
src/recruiting_agent_pollock/retrieval/: __init__.py  vector_store.py
src/recruiting_agent_pollock/voice/: __init__.py  audio_io.py  speakable.py  stt.py  tts.py  voice_session.py
tests/: __init__.py  test_hypothesis_layer.py  test_llm_json_repair.py  test_orchestrator_smoke.py  test_parser_normalizer_sanitization.py  test_tts_speakable_filter.py  test_voice_runner_env_defaults.py  test_voice_session_smoke.py
